updated Russian translation

--- a/po/wesnoth-units/ru.po
+++ b/po/wesnoth-units/ru.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: wesnoth.po\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2012-05-17 13:55+0400\n"
+"PO-Revision-Date: 2012-08-24 03:10+0400\n"
 "Last-Translator: Fedor Khod'kov <fkhodkov@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "Language: \n"
@@ -22,7 +22,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Emacs 24.1.50.1, po-mode 2.2+0.4\n"
+"X-Generator: Emacs 24.2.50.1, po-mode 2.2+0.4\n"
 "X-Poedit-SourceCharset: utf-8\n"
 "X-Poedit-Language: Russian\n"
 "X-Poedit-Country: RUSSIAN FEDERATION\n"
@@ -41,13 +41,20 @@ msgid ""
 "Dwarven citadels are both renowned and feared; weapons that have broken the "
 "mightiest of warriors with a single blow."
 msgstr ""
-"Почему собратья-гномы зовут их «драконьими стражами» — до конца не ясно. "
-"Одни болтают, что название происходит от их оружия — странного посоха, "
-"изрыгающего огонь и смерть. Другие считают его намёком на то, что такое "
-"оружие поразило бы даже истинного дракона, если бы таковой вдруг вновь "
-"объявился в нашем мире. В любом случае, именно за это оружие боятся и "
-"уважают охранников великих гномьих крепостей, ибо оно одним ударом сражает "
-"сильнейших бойцов."
+"Драконьи стражи — самые загадочные из всех гномов. Никто даже не знает, "
+"почему собратья-гномы их так прозвали. Одни болтают, что всё дело в их "
+"оружии — этот странный посох изрыгает огонь и сеет смерть, как настоящий "
+"дракон. Другие думают, что это идёт ещё из тех времён, когда стражи своим "
+"оружием защищали гномов от истинных драконов.\n"
+"Рассказывают, что в короткий период перемирия между двумя гномо-эльфийскими "
+"войнами, один драконий страж почему-то забрёл в лес к эльфам. Те не смогли "
+"удержаться от соблазна узнать его тайну и попытались его схватить. Как они "
+"их ни уговаривал, как ни напоминал им о перемирии — ничто негодяев не "
+"остановило. Тогда гном достал свой посох... Сбежать смог только один эльф. "
+"Он вернулся к своим совершенно помешанным. В бреду он что-то твердил про "
+"какие-то вспышки, каждая из которых забирала жизнь одного эльфа, но больше "
+"от него ничего добиться не смогли. Говорят, что это и привело к началу "
+"второй войны гномов и эльфов."
 
 #. [attack]: type=blade
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Dragonguard.cfg:25
@@ -138,11 +145,12 @@ msgid ""
 "role is to hold the line, and to take a heavy toll on those who try to break "
 "it. As the line marches forward, they act to secure its hard-won advance."
 msgstr ""
-"Раса гномов славится крепким телосложением, и многие их воины экипируются "
-"так, чтобы использовать это преимущество. Гномьи стражники идут в битву с "
-"копьями и огромными башенными щитам. Обычно их роль — удерживать строй и "
-"собирать кровавую дань с тех, кто пытается прорвать его. По мере продвижения "
-"стражники защищают с трудом занятое пространство."
+"Эльфийское выражение «крепкий, как дуб» как нельзя лучше подходит к "
+"стражникам: уж если они где-то встанут, то сдвинуть с места их будет "
+"непросто. Прикрываясь башенными щитами, за которыми их практически не видно, "
+"орудуя массивными копьями, которые они могут при необходимости и метнуть в "
+"противника, выстроившись в свой любимый хирд, они непоколебимы как те скалы, "
+"из которых гномы были выкованы по легенде."
 
 #. [attack]: type=pierce
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Guardsman.cfg:30
@@ -215,10 +223,16 @@ msgid ""
 "rather than merely ineffectual. These dwarves are masters of the melee, and "
 "can hold a patch of earth with the singleminded tenacity of an oak."
 msgstr ""
-"Лучшие среди своих собратьев, часовые служат оплотом боевых порядков. Вести "
-"прямую атаку на построение часовых зачастую просто немыслимо: это не только "
-"бесполезно, но и самоубийственно. Эти гномы — мастера рукопашного боя и "
-"могут удерживать клочок земли с упорством и стойкостью дуба."
+"Прозвище «скала» эти гномы заслужили не случайно. Опыт и индивидуально "
+"подогнанные доспехи, делают их практически неуязвимыми. Как скала может "
+"непоколебимо стоять посреди моря, так и эти бойцы, могут удержать для вашей "
+"армии любую точку. У гномов есть легенда времён самой первой гномо-"
+"эльфийской войны. Эльфы тогда вплотную подошли ко входу в пещеры; "
+"подкрепления же гномов ожидались лишь через сутки. И тогда один такой "
+"часовой закрыл узкий проход и удерживал эльфов до подхода основных сил. Один "
+"против всех. Когда же пришла подмога, на нём обнаружили всего несколько "
+"царапин, зато щит его и доспехи были утыканы стрелами, как дикобраз. (Погиб "
+"этот гном, кстати, очень глупо - подавился костью на пире в свою честь.)"
 
 # **
 #. [unit_type]: id=Dwarvish Stalwart, race=dwarf
@@ -231,10 +245,11 @@ msgid ""
 "ground against all but the most visceral assault. It is a dangerous thing to "
 "lose a foothold to one such as these, for it will not be easily reprised."
 msgstr ""
-"Опыт и тренировки делают Хранителей ценными солдатами. Эти мощные бойцы "
-"снаряжены сообразно своим навыкам, и могут удерживать позиции против почти "
-"любых атак. Опасно сдавать таким бойцам важную позицию: вернуть её будет "
-"очень непросто."
+"У эльфов есть поговорка: если где-то вырос лес — его оттуда не изгонишь. Но "
+"одно дело эльфы со своими россказнями, другое дело — гномы в бою: если они "
+"окопались — их уже не выбить. Несколько проведёных сражений даёт хранителям "
+"представлние о преимуществах разных типов местности и потому они знают где "
+"как лучше окопаться."
 
 #. [unit_type]: id=Dwarvish Thunderer, race=dwarf
 #. [unit_type]: id=Dwarvish Masked Thunderer, race=dwarf
@@ -247,11 +262,18 @@ msgid ""
 "The deafening noise of these ‘thundersticks’ is terrifying to behold, and is "
 "made more so by the secrecy which dwarves wrap about their workings."
 msgstr ""
-"Когда люди Веснота впервые встретили гномов, то были изумлены мощью "
-"Громовержцев, способных издалека насылать смерть посредством странных "
-"жезлов, с которыми они выходят на поле боя. Оглушающий шум этих «громовых "
-"посохов» внушает страх, а то, как гномы берегут их секрет, делает их ещё "
-"страшнее."
+"Эльфы готовились к очередной битве с гномами. Как всегда, они очень "
+"рассчитывали на своих лучников — пока гномы со своими молотами и топорами до "
+"них добегут, те успеют утыкать нападавших стрелами, как ёлки. Велико же было "
+"изумление эльфийских военачальников, когда перед хирдом выступили гномы с "
+"какими-то палками в руках. В следующий миг раздался оглушающий грохот, "
+"подобный раскатам грома, и на лучников обрушился град из маленьких "
+"смертоносных металлических шариков.\n"
+"Так эльфы впервые познакомились с громовержцами — самыми загадочными "
+"гномьими воинами. Они столь ревностно хранят секрет свеого оружия, что не "
+"доверяют его даже другим членам своего клана. Этот ореол таинственности и "
+"убийственная мощь их оружия нагоняет страх на любого, кому не повезёт "
+"встретиться с громовержцами на поле боя."
 
 #. [attack]: type=pierce
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Thunderer.cfg:51
@@ -277,15 +299,16 @@ msgid ""
 "Though a single shot from these ‘thundersticks’ can take several minutes to "
 "prepare, the results are seen by the Dwarves as being well worth the wait."
 msgstr ""
-"Громовые стражи знамениты своим загадочным оружием, странными посохами из "
-"железа и дерева, издающими в бою громоподобный звук. Механизм действия этого "
-"оружия покрыт тайной: гномы Кналга, которые их используют (и, как считается, "
-"сами их и мастерят), уносят этот секрет с собой в могилу. Известно лишь, что "
-"гномы сыплют странную черную пыль в жерло своего оружия. Говорят, что это "
-"корм для зверя, заточённого внутри.\n"
-"\n"
-"Хотя подготовка одного выстрела из этих «громовых посохов» занимает "
-"несколько минут, по мнению гномов результат того стоит."
+"Когда громовержец закалится в боях и докажет, что умеет держать язык за "
+"зубами, он становится громовым стражем и обзаводится новым, намного более "
+"смертоносным посохом из дерева и железа. Говорят, они сами куют себе оружие "
+"по тайным чертежам. Мало что известно том, как работает их оружие. Вроде бы "
+"кто-то видел, как гномы засыпают в него какой-то странный чёрный порошок. "
+"Люди болтают, что этим порошком они кормят огнедышащую тварь, что заперта в "
+"этом посохе. Но сказать точно никто не берётся.\n"
+"Громовые стражи — страшные противники: пока гном зарядит своё оружие, эльф "
+"успеет выпустить в него три-четыре стрелы; но мощь выстрела, который затем "
+"последует, стоит того, чтобы потерпеть!"
 
 #. [unit_type]: id=Dwarvish Runemaster, race=dwarf
 #. [unit_type]: id=Dwarvish Rune Lord, race=dwarf
@@ -310,10 +333,11 @@ msgid ""
 "their runes cause the physical blows of their enemies to deal less damage "
 "than would be expected."
 msgstr ""
-"Высший ранг, которого может достичь гном, не одарённый сверхъестественным "
-"даром — ранг мастера рун. Они бьют не слабее лучших воинов, так что и без "
-"своего искусства были бы весьма опасны. С ним же они почти что неуязвимы: их "
-"руны изрядно уменьшают урон, наносимый физическими атаками."
+"Высший ранг, которого может достичь кузнец рун, не одарённый "
+"сверхъестественным даром — ранг рунного мастера. Они бьют не слабее лучших "
+"воинов, так что и без своего искусства были бы весьма опасны. С ним же они "
+"почти что неуязвимы: их руны изрядно уменьшают урон, наносимый физическими "
+"атаками."
 
 #. [attack]: type=cold
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Rune_Lord.cfg:44
@@ -921,7 +945,7 @@ msgstr ""
 #. [unit_type]: id=Dwarvish Arcanister, race=dwarf
 #: data/core/units/dwarves/Arcanister.cfg:4
 msgid "Dwarvish Arcanister"
-msgstr "Чародей"
+msgstr "Заклинатель"
 
 #. [unit_type]: id=Dwarvish Arcanister, race=dwarf
 #: data/core/units/dwarves/Arcanister.cfg:31
@@ -931,10 +955,16 @@ msgid ""
 "that is his intent. His skill in runecrafting is unrivaled, and the glyphs "
 "he carves into his weapons and armor deflect the blows of his enemies."
 msgstr ""
-"Чародей — сильнейший из заклинателей рун. Он мгновенно уничтожит раненого "
-"врага; редко кому удаётся уйти от его ударов. Никто не превзойдёт его в "
-"рунических навыках; знаки, который он наносит на оружие и броню, отражают "
-"удары его врагов."
+"Самые одарённые заклинатели не просто знают, как и для чего использовать "
+"руны; они словно чувствуют их магическую силу. Они смело пробуют разные "
+"сочетания рун и достигают порой невероятного могущества. Встреча с таким "
+"гномом — самое страшное, что может случиться с врагом; раненому бойцу хватит "
+"и одного удара молотом; а увернуться удаётся немногим!\n"
+"Среди людей ходят слухи, что броню, выкованную заклинателями, не может "
+"разрубить даже тролль, а оружие, зачарованное ими, режет камни как масло. "
+"Многие жулики неплохо нажились, продавая доверчивым простакам поддельные "
+"вещицы, якобы сделанные заклинателями. Неужели неясно, что такие вещи никто "
+"в здравом уме продавать не будет?!"
 
 #. [unit_type]: id=Dwarvish Berserker, race=dwarf
 #: data/core/units/dwarves/Berserker.cfg:4
@@ -978,11 +1008,20 @@ msgid ""
 "having practiced this skill hunting in the mountains. Their maneuverability "
 "makes them dangerous and tricky foes."
 msgstr ""
-"Геологи гномов — несравненные мастера выживания. Обходясь лишь своим "
-"сняряжением, они могут месяцами бродить по лесам и горам в поисках новых "
-"залежей руды и минералов. В рукопашной их навыки похуже, чем у других "
-"гномов, зато они — несравненные метатели топоров (напрактиковались, охотясь "
-"в горах). Их маневренность делает геологов опасными в бою."
+"Гномы терпеть не могут выходить на поверхность, для них это всё равно что "
+"наказание. Тем не менее, есть одна должность, до которой хотел бы "
+"дослужиться любой гном. Это должность геолога. Эти достойнейшие "
+"представители своего народа заняты тем, что ищут новые месторождения руд и "
+"драгоценных камней. Без них гномы бы давно уже переплавили всё "
+"легкодоступное железо и просто умерли бы со скуки. Потому-то геологи и "
+"пользуются у гномов особым уважением.\n"
+"Но не каждый гном может удостоиться такого звания. Тут нужны быстрые ноги, "
+"ловкость и хороший глазомер (поэтому геологи — несравненные метатели "
+"топоров).\n"
+"Во время войн ночной кошмар любой армии, забредшей в горы — летучий отряд "
+"геологов. Они быстро и незаметно подкрадываются к вашим войскам на привале, "
+"так же быстро уходят, а их топоры тем временем собирают свою кровавую жатву. "
+"Попробуй потом, побегай за ними по горам!"
 
 #. [unit_type]: id=Dwarvish Fighter, race=dwarf
 #: data/core/units/dwarves/Fighter.cfg:4
@@ -1034,11 +1073,12 @@ msgid ""
 "territory. They are powerful fighters in a melee, and from a distance their "
 "deftly thrown axes can rival the power and accuracy of a human archer."
 msgstr ""
-"Эти выносливые гномы порой надолго покидают свои пещеры для разведки и "
-"патрулирования границ. Они проводят время, высматривая нарушителей и "
-"сражаясь с бандитами и ворами, вторгающимися на земли гномов. Они сильны в "
-"рукопашной, и так искусно мечут топоры, что могут сравниться силой и "
-"точностью с людскими лучниками."
+"Некоторых скороходов, особенно отличившихся в разведке, совет кланов "
+"направляет на охрану своих границ. У гномов нет специальных пограничных "
+"войск — мало кому охота столько времени торчать на поверхности. Потому-то "
+"для пограничной службы и выбирают тех, кто побыстрее: пробежался по своему "
+"участку, убедился, что всё спокойно, и можешь возвращаться обратно в горы. "
+"Главное не забывать обходить границу три раза в день."
 
 #. [unit_type]: id=Dwarvish Runesmith, race=dwarf
 #: data/core/units/dwarves/Runesmith.cfg:4
@@ -1053,9 +1093,12 @@ msgid ""
 "and accuracy, and disrupt the blows of their enemies, causing them to strike "
 "softly, weakly and on the armor of the defender."
 msgstr ""
-"Рунные кузнецы, потренировав свои навыки, наносят мистические руны на оружие "
-"и броню. Эти руны дают их ударам точность и силу, и отражают удары врагов, "
-"заставляя их бить мягче, слабее и попадать по броне."
+"Гномы — народ воинов и кузнецов, они не очень-то жалуют всякую магию и "
+"колдовство. Но кое-каких успехов они добились и здесь. Уже давно гномы "
+"подметили, что если нанести на оружие некоторые знаки, оно сможеет пробить "
+"даже самую крепкую броню. Другие же символы сделают даже обычную людскую "
+"броню крепче гномьей. Знания эти гномы хранят очень строго, они передаются "
+"только между знатоками рун — от мастера к ученику."
 
 #. [unit_type]: id=Dwarvish Scout, race=dwarf
 #: data/core/units/dwarves/Scout.cfg:4
@@ -1074,13 +1117,17 @@ msgid ""
 "However, they pay for their speed with the poorer protection provided by "
 "their lighter armor."
 msgstr ""
-"Хотя в беге на короткие дистанции гномам не побить более высокорослых рас, "
-"но когда они избавляются от тяжёлых доспехов, их невероятная выносливость "
-"позволяет им соперничать с другими расами. Гномьи Скороходы используют это "
-"преимущество, выходя впереди основных сил, докладывая о диспозиции и "
-"передвижениях противника или захватывая важные объекты. В мирное время они "
-"нередко передают сообщения из одной гномской общины в другую. Однако, за "
-"скорость они платят более слабой защитой своих лёгких доспехов."
+"Вы привыкли видеть гномов, облачённых в тяжелую броню и вооружённых "
+"массивными топорами? Думаете, они настолько медлительны, что не уследят за "
+"вашими войсками? Тогда Вас ждёт «небольшое» разочарование. Без доспехов "
+"гномы неплохо бегают, и из них получаются неплохие разведчики, которые бегут "
+"впереди основной армии и докладывают обстановку.\n"
+"Конечно, без знаменитой гномьей брони они гораздо уязвимее своих товарищей. "
+"Но скороходы в рукопашную и не лезут - у них есть метательные топорики. А уж "
+"остротой глаз гномы могут потягаться с самими эльфами (сомневаетесь? "
+"Посмотрите на украшения, которые куют гномы. Такому изяществу и эльфы "
+"позавидуют!).\n"
+"В мирное время эти гномы часто служат гонцами между разными общинами."
 
 #. [unit_type]: id=Dwarvish Sentinel, race=dwarf
 #: data/core/units/dwarves/Sentinel.cfg:4
