completely fixed the Ukrainian manual

--- a/po/wesnoth-manual/uk.po
+++ b/po/wesnoth-manual/uk.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.10\n"
 "POT-Creation-Date: 2012-08-18 09:16+0300\n"
-"PO-Revision-Date: 2012-08-18 19:40+0200\n"
-"Last-Translator: Igor Paliychuk <mansonigor@gmail.com>\n"
+"PO-Revision-Date: 2012-08-25 12:28+0100\n"
+"Last-Translator: Nils Kneuper <crazy-ivanovic  AT gmx  D O  T net>\n"
 "Language-Team: none\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
@@ -1039,8 +1039,8 @@ msgid ""
 "multiplayer game)  chatting with other players before pressing that button "
 "to advance."
 msgstr ""
-"Коли сценарій виграний, карта стане сірою і кнопка <emphasis>Закінчити хід</ "
-"emphasis> заміниться на <emphasis>Закінчити сценарій</ emphasis>. Тепер ви "
+"Коли сценарій виграний, карта стане сірою і кнопка <emphasis>Закінчити хід</"
+"emphasis> заміниться на <emphasis>Закінчити сценарій</emphasis>. Тепер ви "
 "можете, наприклад, змінити ваші налаштування, або (в мережевій грі) "
 "поспілкуватися в чаті з іншими гравцями, перш ніж натискати цю кнопку і "
 "рухатися далі."
@@ -1939,7 +1939,7 @@ msgid ""
 msgstr ""
 "Клацніть правою клавішею на вільній комірці замку і оберіть Закликати, щоб "
 "закликати бійця з минулих сценаріїв, Заклик коштує 20 золотих за бійця. За "
-"деталями дивіться <link linkend=\"unit_recall\">заклик бійців</ link>."
+"деталями дивіться <link linkend=\"unit_recall\">заклик бійців</link>."
 
 #. type: Content of: <book><chapter><section><section><title>
 #: /src/wesnoth-1.10/doc/manual/manual.en.xml:1344
@@ -2013,7 +2013,7 @@ msgid ""
 msgstr ""
 "У Битві за Веснот є сотні типів бійців, які мають багатий набір "
 "властивостей. Крім цього, окремі бійці можуть мати специфічні <link linkend="
-"\"traits\">риси</ link>, що злегка відрізняють їх від інших бійців того ж "
+"\"traits\">риси</link>, що злегка відрізняють їх від інших бійців того ж "
 "типу. Нарешті, розробники кампаній можуть додавати в свої кампанії "
 "унікальних бійців, щоб ще більше розширити доступні гравцям можливості."
 
