updated Italian translation

--- a/po/wesnoth-utbs/it.po
+++ b/po/wesnoth-utbs/it.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: it\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-25 12:35+0200\n"
-"PO-Revision-Date: 2012-01-18 12:50+0100\n"
+"PO-Revision-Date: 2012-08-30 12:40+0100\n"
 "Last-Translator: Antonio 'Antro' Rosella <arosella@yahoo.com>\n"
 "Language-Team: Italian <wesnoth-l10n-it@cirulla.net>\n"
 "Language: it\n"
@@ -1373,10 +1373,8 @@ msgstr ""
 #. [message]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:515
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:658
-#, fuzzy
-#| msgid "Should I take this sword?"
 msgid "Should I take this ring?"
-msgstr "Devo prendere la spada?"
+msgstr "Devo prendere questo anello?"
 
 #. [option]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:517
@@ -1400,10 +1398,8 @@ msgstr "Alla fine di ciascun turno, questa unità non riceve danni dal deserto."
 #. [option]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:553
 #: data/campaigns/Under_the_Burning_Suns/scenarios/04_Descending_into_Darkness.cfg:693
-#, fuzzy
-#| msgid "No, I think someone else should wield it."
 msgid "No, I think someone else should wear it."
-msgstr "No, credo che dovrà impugnarla qualcun altro."
+msgstr "No, credo che dovrebbe indossarlo qualcun altro."
 
 #. [message]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:578
@@ -1898,9 +1894,9 @@ msgstr ""
 #. [option]: speaker=unit
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:1693
 #, fuzzy
-#| msgid "No, I think someone else should wield it."
+#| msgid "No, I think someone else should wear it."
 msgid "No, I think someone else should take it."
-msgstr "No, credo che dovrà impugnarla qualcun altro."
+msgstr "No, credo che dovrebbe indossarlo qualcun altro."
 
 #. [message]: speaker=Kaleh
 #: data/campaigns/Under_the_Burning_Suns/scenarios/02_Across_the_Harsh_Sands.cfg:1735
