--- a/po/wesnoth-editor/hr.po
+++ b/po/wesnoth-editor/hr.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.4+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-09-01 18:47+0200\n"
-"PO-Revision-Date: 2008-03-26 23:08+0100\n"
-"Last-Translator: Nino  <nino.gunjaca@zg.t-com.hr>\n"
+"PO-Revision-Date: 2012-08-18 16:47+0100\n"
+"Last-Translator: Nino <nino.gunjaca@zg.t-com.hr>\n"
 "Language-Team: none\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -22,27 +22,29 @@ msgstr ""
 #. [brush]
 #: data/core/editor/brushes.cfg:5
 msgid "Single Hex"
-msgstr ""
+msgstr "Jedno polje"
 
 #. [brush]
 #: data/core/editor/brushes.cfg:15
 msgid "Radius 1 Hex"
-msgstr ""
+msgstr "Radijus 1 polje"
 
 #. [brush]
 #: data/core/editor/brushes.cfg:25
 msgid "Radius 2 Hex"
-msgstr ""
+msgstr "Radijus 2 poljs"
 
 #. [brush]
 #: data/core/editor/brushes.cfg:46
 msgid "Hex Line NW-SE"
-msgstr ""
+msgstr "Linija polja SZ-JI"
 
 #. [brush]
 #: data/core/editor/brushes.cfg:62
+#, fuzzy
+#| msgid "Hex Line NW-SE"
 msgid "Hex Line SE-NW"
-msgstr ""
+msgstr "Linija polja SZ-JI"
 
 #. [editor_group]: id=all
 #: data/core/editor/terrain-groups.cfg:11
@@ -67,7 +69,7 @@ msgstr "pustinja"
 #. [editor_group]: id=embellishments
 #: data/core/editor/terrain-groups.cfg:38
 msgid "embellishments"
-msgstr ""
+msgstr "Ornament"
 
 #. [editor_group]: id=forest
 #: data/core/editor/terrain-groups.cfg:45
@@ -97,7 +99,7 @@ msgstr "pećina"
 #. [editor_group]: id=obstacle
 #: data/core/editor/terrain-groups.cfg:80
 msgid "obstacle"
-msgstr ""
+msgstr "prepreka"
 
 #. [editor_group]: id=village
 #: data/core/editor/terrain-groups.cfg:87
@@ -112,12 +114,12 @@ msgstr "dvorac"
 #. [editor_group]: id=bridge
 #: data/core/editor/terrain-groups.cfg:101
 msgid "bridge"
-msgstr ""
+msgstr "most"
 
 #. [editor_group]: id=special
 #: data/core/editor/terrain-groups.cfg:108
 msgid "special"
-msgstr ""
+msgstr "specijalni"
 
 #. [editor_tool_hint]: id=editor-tool-fill
 #. [editor_tool_hint]: id=editor-tool-paint
@@ -129,6 +131,9 @@ msgid ""
 "Use left/right mouse button to draw fore-/background terrain. Hold Shift to "
 "paint base layer only. Ctrl+click to sample terrain under cursor."
 msgstr ""
+"Lijevim/desnim klikom miša crtate teren sprijeda/u pozadini. Držite Shift za "
+"slikanje samo po osnovnom sloju. Ctrl+klikom uzimate uzorak terena ispod "
+"pokazivača."
 
 #. [editor_tool_hint]: id=editor-tool-select
 #. [menu]: id=select_button_editor
@@ -137,6 +142,8 @@ msgid ""
 "Left mouse button selects, right deselects. Hold Shift for magic-wand "
 "selection of tiles with same terrain."
 msgstr ""
+"Lijeva tipka miša označuje,a desna odznačuje. Drži Shift za odabir dijelova "
+"sa istim terenom."
 
 #. [editor_tool_hint]: id=editor-tool-starting-position
 #. [menu]: id=start_position_button_editor
@@ -146,6 +153,8 @@ msgid ""
 "scroll to the starting position, alt+number sets respective starting "
 "position under cursor, delete clears."
 msgstr ""
+"Lijeva tipka miša pokazuje odabir,desna briše. Brojevne tipke vrte do "
+"startne pozicije, alt+broj postavlja startnu poziciju,delete briše."
 
 #. [editor_tool_hint]: id=editor-paste
 #: data/core/editor/tool-hints.cfg:30
@@ -153,6 +162,8 @@ msgid ""
 "Click to paste, zoom out for more accuracy when pasting large areas. Use the "
 "edit menu to transform the clipboard (rotate, mirror)."
 msgstr ""
+"Klikni da zaljepiš,odzumiraj za bolju preciznost kod ljepljenja većih "
+"područja. Koristi meni Uređivanje da promijeniš clipboard (rotiraj,zrcalo)"
 
 #. [menu]: id=menu-editor-file
 #: data/themes/editor.cfg:116
@@ -167,13 +178,12 @@ msgstr "Uređivanje"
 #. [menu]: id=menu-editor-map
 #: data/themes/editor.cfg:143
 msgid "Map"
-msgstr ""
+msgstr "Mapa"
 
 #. [menu]: id=menu-editor-window
 #: data/themes/editor.cfg:156
-#, fuzzy
 msgid "Window"
-msgstr "Poništi"
+msgstr "Prozor"
 
 #. [menu]: id=menu-editor-side
 #: data/themes/editor.cfg:179
@@ -241,31 +251,33 @@ msgstr "Izađi iz uređivača"
 
 #: src/editor/editor_controller.cpp:164
 msgid "Fatal error"
-msgstr ""
+msgstr "Fatalna greška"
 
 #: src/editor/editor_controller.cpp:188
 msgid "Do you really want to quit?"
-msgstr ""
+msgstr "Stvarno želiš izaći?"
 
 #: src/editor/editor_controller.cpp:190
 msgid ""
 "Do you really want to quit? Changes in the map since the last save will be "
 "lost."
-msgstr ""
+msgstr "Želiš izaći? Sve promjene od zadnjeg spremanja če biti izbrisane."
 
 #: src/editor/editor_controller.cpp:192
 msgid ""
 "Do you really want to quit? The following maps were modified and all changes "
 "since the last save will be lost:"
 msgstr ""
+"Želiš izači?Navedene mape su promjenjene i sve promjene od zadnjeg spremanja "
+"će biti izgubljene:"
 
 #: src/editor/editor_controller.cpp:195
 msgid "Quit"
-msgstr ""
+msgstr "Izađi"
 
 #: src/editor/editor_controller.cpp:206
 msgid "No editor time-of-day found."
-msgstr ""
+msgstr "Nije pronađeno doba dana uređivača."
 
 #: src/editor/editor_controller.cpp:570
 msgid "Undo"
@@ -273,7 +285,7 @@ msgstr "Poništi"
 
 #: src/editor/editor_controller.cpp:572
 msgid "Can’t Undo"
-msgstr ""
+msgstr "Ne može se poništiti"
 
 #: src/editor/editor_controller.cpp:576
 msgid "Redo"
@@ -281,83 +293,76 @@ msgstr "Ponovi"
 
 #: src/editor/editor_controller.cpp:578
 msgid "Can’t Redo"
-msgstr ""
+msgstr "Ne može se ponoviti"
 
 #: src/editor/map/context_manager.cpp:82
-#, fuzzy
 msgid "Auto-update Terrain Transitions: Yes"
-msgstr "Ažuriraj prijelaze"
+msgstr "Automatski ažuriraj prijelaze:ne"
 
 #: src/editor/map/context_manager.cpp:85
-#, fuzzy
 msgid "Auto-update Terrain Transitions: Partial"
-msgstr "Ažuriraj prijelaze"
+msgstr "Automatski ažuriraj prijelaze:djelomično"
 
 #: src/editor/map/context_manager.cpp:89
-#, fuzzy
 msgid "Auto-update Terrain Transitions: No"
-msgstr "Ažuriraj prijelaze"
+msgstr "Automatski ažuriraj prijelaze:Ne"
 
 #: src/editor/map/context_manager.cpp:101
 #: src/editor/map/context_manager.cpp:193
 msgid "(New Map)"
-msgstr ""
+msgstr "(Nova Mapa)"
 
 #: src/editor/map/context_manager.cpp:162
-#, fuzzy
 msgid "Choose a Map to Open"
 msgstr "Odaberite mapu koju želite otvoriti"
 
 #: src/editor/map/context_manager.cpp:236
-#, fuzzy
 msgid "Choose a Mask to Apply"
-msgstr "Odaberite mapu koju želite otvoriti"
+msgstr "Odaberite masku za primjenu"
 
 #: src/editor/map/context_manager.cpp:243
 msgid "Error loading mask"
-msgstr ""
+msgstr "Greška pri otvaranju maske"
 
 #: src/editor/map/context_manager.cpp:264
-#, fuzzy
 msgid "Choose Target Map"
-msgstr "Odaberite mapu koju želite otvoriti"
+msgstr "Izbor ciljne mape"
 
 #: src/editor/map/context_manager.cpp:271
 #: src/editor/map/context_manager.cpp:631
 msgid "Error loading map"
-msgstr ""
+msgstr "Greška pri otvaranju mape"
 
 #: src/editor/map/context_manager.cpp:389
 msgid "Save the Map As"
 msgstr "Spremi mapu kao"
 
 #: src/editor/map/context_manager.cpp:392
-#, fuzzy
 msgid "The file already exists. Do you want to overwrite it?"
-msgstr "Mapa već postoji. Želite li zamijeniti postojeću mapu?"
+msgstr "Fajl već postoji. Želite li zamijeniti postojeći?"
 
 #: src/editor/map/context_manager.cpp:426
 msgid "No random map generators found."
-msgstr ""
+msgstr "Nema nasumičnog generatora mape."
 
 #: src/editor/map/context_manager.cpp:439
 #: src/editor/map/context_manager.cpp:443
 msgid "Map creation failed."
-msgstr ""
+msgstr "Mapa se ne može napraviti"
 
 #: src/editor/map/context_manager.cpp:455
 msgid "Unsaved Changes"
-msgstr ""
+msgstr "Nespremljene promjene"
 
 #: src/editor/map/context_manager.cpp:456
 msgid ""
 "Do you want to discard all changes you made to the map since the last save?"
-msgstr ""
+msgstr "Želiš li izbrisati sve promjene od zadnjeg spremanja mape?"
 
 #: src/editor/map/context_manager.cpp:546
 #: src/editor/map/context_manager.cpp:587
 msgid "This map is already open."
-msgstr ""
+msgstr "Mapa je već otvorena"
 
 #: src/editor/map/context_manager.cpp:567
 msgid "Map saved."
@@ -365,18 +370,20 @@ msgstr "Mapa spremljena."
 
 #: src/editor/map/context_manager.cpp:610
 msgid "Loaded embedded map data"
-msgstr ""
+msgstr "Učitani pripojeni podaci mape"
 
 #: src/editor/map/context_manager.cpp:611
 #: src/editor/map/context_manager.cpp:625
 msgid "Map loaded from scenario"
-msgstr ""
+msgstr "Mapa učitana iz scenarija"
 
 #: src/editor/map/context_manager.cpp:621
 msgid ""
 "Loaded referenced map file:\n"
 "$new"
 msgstr ""
+"Učitana spomenuta datoteka mape:\n"
+"$new"
 
 #: src/editor/map/editor_map.cpp:150
 msgid "Player"
@@ -384,26 +391,26 @@ msgstr "Igrač"
 
 #: src/editor/map/editor_map.cpp:257
 msgid "The size of the target map is different from the current map"
-msgstr ""
+msgstr "Veličina označene mape je veća od ove mape"
 
 #: src/editor/map/map_context.cpp:103
 msgid "File not found"
-msgstr ""
+msgstr "Fajl nije pronađen"
 
 #: src/editor/map/map_context.cpp:117
 msgid ""
 "The map file looks like a scenario, but the map_data value does not point to "
 "an existing file"
 msgstr ""
+"Fajl mape izgleda kao scenarij,ali map_data ne pokazuje na postojeći fajl"
 
 #: src/editor/map/map_context.cpp:133
 msgid "Empty map file"
-msgstr ""
+msgstr "Prazni fajl mape"
 
 #: src/editor/map/map_context.cpp:306
-#, fuzzy
 msgid "Could not save into scenario"
-msgstr "Nije bilo moguće spremiti mapu: $msg"
+msgstr "Nije bilo moguće spremiti u scenarij"
 
 #: src/editor/map/map_context.cpp:313
 msgid "Could not save the map: $msg"
@@ -415,32 +422,31 @@ msgstr ""
 
 #: src/editor/palette/editor_palettes.cpp:305
 msgid "(non-core)"
-msgstr ""
+msgstr "(vanjski)"
 
 #: src/editor/palette/editor_palettes.cpp:306
 msgid "Will not work in game without extra care."
-msgstr ""
+msgstr "Ne radi u igri bez dodatnog brige"
 
 #: src/editor/palette/terrain_palettes.cpp:55
 msgid "FG: "
-msgstr ""
+msgstr "FG:"
 
 #: src/editor/palette/terrain_palettes.cpp:56
 msgid "BG: "
-msgstr ""
+msgstr "BG:"
 
 #: src/gui/dialogs/editor_set_starting_position.cpp:84
-#, fuzzy
 msgid "player^None"
-msgstr "Igrač"
+msgstr "Igrač^Ništa"
 
 #: src/gui/dialogs/editor_set_starting_position.cpp:96
 msgid "Player $player_number"
-msgstr ""
+msgstr "Igrač $player_number"
 
 #: src/gui/dialogs/editor_settings.cpp:166
 msgid "Custom setting"
-msgstr ""
+msgstr "Uobičajene postavke"
 
 #~ msgid "FG"
 #~ msgstr "Prednji plan"
