--- a/po/wesnoth-test/hr.po
+++ b/po/wesnoth-test/hr.po
@@ -6,9 +6,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.5+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2010-05-24 17:53+0200\n"
-"PO-Revision-Date: 2008-03-26 23:08+0100\n"
-"Last-Translator: Nino  <nino.gunjaca@zg.t-com.hr>\n"
+"POT-Creation-Date: 2012-09-01 18:47+0200\n"
+"PO-Revision-Date: 2012-08-20 12:22+0100\n"
+"Last-Translator: Nino <nino.gunjaca@zg.t-com.hr>\n"
 "Language-Team: none\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
@@ -20,4 +20,4 @@ msgstr ""
 #. [test_key2]
 #: data/test/test/_main.cfg:24
 msgid "testing translation reset."
-msgstr ""
+msgstr "testiram reset prijevoda."
