--- a/po/wesnoth-help/hr.po
+++ b/po/wesnoth-help/hr.po
@@ -9,17 +9,15 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.4+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2008-04-01 15:36+0100\n"
+"PO-Revision-Date: 2012-08-20 11:37+0100\n"
 "Last-Translator: \n"
 "Language-Team: none\n"
-"Language: \n"
+"Language: hr_HR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
 "%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Poedit-Language: Croatian\n"
-"X-Poedit-Country: CROATIA\n"
 
 #. [time]: id=underground
 #: data/campaigns/Heir_To_The_Throne/utils/httt_utils.cfg:523
@@ -75,7 +73,7 @@ msgstr ""
 #: data/campaigns/Under_the_Burning_Suns/utils/abilities.cfg:16
 #: data/core/macros/abilities.cfg:10
 msgid "heals +4"
-msgstr ""
+msgstr "liječi +4"
 
 #. [heals]: id=healing
 #: data/campaigns/Under_the_Burning_Suns/utils/abilities.cfg:17
@@ -100,7 +98,7 @@ msgstr ""
 #: data/campaigns/Under_the_Burning_Suns/utils/abilities.cfg:45
 #: data/core/macros/abilities.cfg:30
 msgid "heals +8"
-msgstr ""
+msgstr "liječi +8"
 
 #. [heals]: id=healing
 #: data/campaigns/Under_the_Burning_Suns/utils/abilities.cfg:46
@@ -126,7 +124,7 @@ msgstr ""
 #. [topic]: id=..encyclopedia
 #: data/core/encyclopedia/_main.cfg:5 data/core/encyclopedia/_main.cfg:12
 msgid "Encyclopedia"
-msgstr ""
+msgstr "Enciklopedija"
 
 #. [topic]: id=..encyclopedia
 #: data/core/encyclopedia/_main.cfg:14
@@ -187,7 +185,7 @@ msgstr ""
 #. [topic]: id=world_ocean
 #: data/core/encyclopedia/drakes.cfg:31
 msgid "World Ocean"
-msgstr ""
+msgstr "Svjetski ocean"
 
 #. [topic]: id=world_ocean
 #: data/core/encyclopedia/drakes.cfg:32
@@ -200,7 +198,7 @@ msgstr ""
 #. [topic]: id=new_continent
 #: data/core/encyclopedia/drakes.cfg:37
 msgid "New Continent"
-msgstr ""
+msgstr "Novi Kontinent"
 
 #. [topic]: id=new_continent
 #: data/core/encyclopedia/drakes.cfg:38
@@ -515,24 +513,24 @@ msgstr ""
 #. [topic]: id=drakish_language
 #: data/core/encyclopedia/drakes.cfg:187
 msgid "Drakish, language"
-msgstr ""
+msgstr "Drakish,jezik"
 
 #. [topic]: id=drakish_language
 #: data/core/encyclopedia/drakes.cfg:188
 msgid "The language spoken by the drakes."
-msgstr ""
+msgstr "Jezik zmajeva."
 
 #. [section]: id=geography
 #. [topic]: id=..geography
 #: data/core/encyclopedia/geography.cfg:11
 #: data/core/encyclopedia/geography.cfg:18
 msgid "Geography"
-msgstr ""
+msgstr "Geografija"
 
 #. [topic]: id=arkan_thoria
 #: data/core/encyclopedia/geography.cfg:25
 msgid "Arkan-thoria"
-msgstr ""
+msgstr "Arkan-thoria"
 
 #. [topic]: id=arkan_thoria
 #: data/core/encyclopedia/geography.cfg:26
@@ -544,7 +542,7 @@ msgstr ""
 #. [topic]: id=great_ocean
 #: data/core/encyclopedia/geography.cfg:31
 msgid "Great Ocean"
-msgstr ""
+msgstr "Veliki Ocean"
 
 #. [topic]: id=great_ocean
 #: data/core/encyclopedia/geography.cfg:32
@@ -557,7 +555,7 @@ msgstr ""
 #. [topic]: id=morogor
 #: data/core/encyclopedia/geography.cfg:37
 msgid "Morogor"
-msgstr ""
+msgstr "Morogor"
 
 #. [topic]: id=morogor
 #: data/core/encyclopedia/geography.cfg:40
@@ -572,7 +570,7 @@ msgstr ""
 #. [topic]: id=green_isle
 #: data/core/encyclopedia/geography.cfg:45
 msgid "Green Isle"
-msgstr ""
+msgstr "Zeleni Otok"
 
 #. [topic]: id=green_isle
 #: data/core/encyclopedia/geography.cfg:46
@@ -583,7 +581,7 @@ msgstr ""
 #. [topic]: id=old_continent
 #: data/core/encyclopedia/geography.cfg:51
 msgid "Old Continent"
-msgstr ""
+msgstr "Stari Kontinent"
 
 #. [topic]: id=old_continent
 #: data/core/encyclopedia/geography.cfg:52
@@ -595,7 +593,7 @@ msgstr ""
 #. [topic]: id=great_continent
 #: data/core/encyclopedia/geography.cfg:57
 msgid "Great Continent"
-msgstr ""
+msgstr "Veliki Kontinent"
 
 #. [topic]: id=great_continent
 #: data/core/encyclopedia/geography.cfg:58
@@ -608,7 +606,7 @@ msgstr ""
 #. [topic]: id=irdya
 #: data/core/encyclopedia/geography.cfg:63
 msgid "Irdya"
-msgstr ""
+msgstr "Irdya"
 
 #. [topic]: id=irdya
 #: data/core/encyclopedia/geography.cfg:64
@@ -622,7 +620,7 @@ msgstr ""
 #. [topic]: id=kingdom_wesnoth
 #: data/core/encyclopedia/geography.cfg:69
 msgid "Kingdom of Wesnoth"
-msgstr ""
+msgstr "Kraljestvo Wesnotha"
 
 #. [topic]: id=kingdom_wesnoth
 #: data/core/encyclopedia/geography.cfg:95
@@ -685,7 +683,7 @@ msgstr ""
 #. [topic]: id=elensefar
 #: data/core/encyclopedia/geography.cfg:100
 msgid "Elensefar"
-msgstr ""
+msgstr "Elensfar"
 
 #. [topic]: id=elensefar
 #: data/core/encyclopedia/geography.cfg:107
@@ -2041,7 +2039,7 @@ msgstr ""
 #. [topic]: id=traits_healthy
 #: data/core/help.cfg:446
 msgid "Healthy"
-msgstr ""
+msgstr "Zdrav"
 
 #. [topic]: id=traits_healthy
 #: data/core/help.cfg:447
@@ -2063,7 +2061,7 @@ msgstr ""
 #. [topic]: id=traits_dim
 #: data/core/help.cfg:454
 msgid "Dim"
-msgstr ""
+msgstr "Mračan"
 
 #. [topic]: id=traits_dim
 #: data/core/help.cfg:455
@@ -2108,7 +2106,7 @@ msgstr ""
 #. [topic]: id=traits_weak
 #: data/core/help.cfg:470
 msgid "Weak"
-msgstr ""
+msgstr "Slabo"
 
 #. [topic]: id=traits_weak
 #: data/core/help.cfg:471
@@ -2140,7 +2138,7 @@ msgstr ""
 #. [topic]: id=terrain_flat
 #: data/core/help.cfg:492
 msgid "Flat"
-msgstr ""
+msgstr "Ravno"
 
 #. [topic]: id=terrain_flat
 #: data/core/help.cfg:497
@@ -2273,7 +2271,7 @@ msgstr ""
 #. [topic]: id=terrain_deep_water
 #: data/core/help.cfg:583
 msgid "Deep Water"
-msgstr ""
+msgstr "Duboka Voda"
 
 #. [topic]: id=terrain_deep_water
 #: data/core/help.cfg:588
@@ -2288,7 +2286,7 @@ msgstr ""
 #. [topic]: id=terrain_frozen
 #: data/core/help.cfg:595
 msgid "Frozen"
-msgstr ""
+msgstr "Zamrznuto"
 
 #. [topic]: id=terrain_frozen
 #: data/core/help.cfg:600
@@ -2304,7 +2302,7 @@ msgstr ""
 #. [topic]: id=terrain_castle
 #: data/core/help.cfg:607
 msgid "Castle"
-msgstr ""
+msgstr "Dvorac"
 
 #. [topic]: id=terrain_castle
 #: data/core/help.cfg:614
@@ -2323,7 +2321,7 @@ msgstr ""
 #. [topic]: id=terrain_sand
 #: data/core/help.cfg:623
 msgid "Sand"
-msgstr ""
+msgstr "Pijesak"
 
 #. [topic]: id=terrain_sand
 #: data/core/help.cfg:628
@@ -2339,7 +2337,7 @@ msgstr ""
 #. [topic]: id=terrain_desert
 #: data/core/help.cfg:635
 msgid "Desert"
-msgstr ""
+msgstr "Pustinja"
 
 #. [topic]: id=terrain_desert
 #: data/core/help.cfg:638
@@ -2352,7 +2350,7 @@ msgstr ""
 #. [topic]: id=terrain_cave
 #: data/core/help.cfg:645
 msgid "Cave"
-msgstr ""
+msgstr "Pečina"
 
 #. [topic]: id=terrain_cave
 #: data/core/help.cfg:650
@@ -2392,7 +2390,7 @@ msgstr ""
 #. [topic]: id=terrain_illuminated_cave
 #: data/core/help.cfg:669
 msgid "Illuminated Cave"
-msgstr ""
+msgstr "Osvijetljena pećina"
 
 #. [topic]: id=terrain_illuminated_cave
 #: data/core/help.cfg:672
@@ -2426,7 +2424,7 @@ msgstr ""
 #. [topic]: id=terrain_village
 #: data/core/help.cfg:691
 msgid "Village"
-msgstr ""
+msgstr "Naselje"
 
 #. [topic]: id=terrain_village
 #: data/core/help.cfg:698
@@ -2479,7 +2477,7 @@ msgstr ""
 #. [topic]: id=terrain_lava
 #: data/core/help.cfg:729
 msgid "Lava"
-msgstr ""
+msgstr "Lava"
 
 #. [topic]: id=terrain_lava
 #: data/core/help.cfg:732
@@ -2496,7 +2494,7 @@ msgstr ""
 #. [topic]: id=terrain_ford
 #: data/core/help.cfg:739
 msgid "River Ford"
-msgstr ""
+msgstr "Plitka Rijeka"
 
 #. [topic]: id=terrain_ford
 #: data/core/help.cfg:742
@@ -2512,7 +2510,7 @@ msgstr ""
 #. [topic]: id=terrain_reef
 #: data/core/help.cfg:749
 msgid "Coastal Reef"
-msgstr ""
+msgstr "Obalni Greben"
 
 #. [topic]: id=terrain_reef
 #: data/core/help.cfg:754
@@ -2528,7 +2526,7 @@ msgstr ""
 #. [topic]: id=terrain_bridge
 #: data/core/help.cfg:761
 msgid "Bridge"
-msgstr ""
+msgstr "Most"
 
 #. [topic]: id=terrain_bridge
 #: data/core/help.cfg:767
@@ -2549,7 +2547,7 @@ msgstr ""
 #. [topic]: id=terrain_impassable
 #: data/core/help.cfg:774
 msgid "Impassable"
-msgstr ""
+msgstr "Neprohodan"
 
 #. [topic]: id=terrain_impassable
 #: data/core/help.cfg:777
@@ -2833,7 +2831,7 @@ msgstr ""
 #. [heals]: id=curing
 #: data/core/macros/abilities.cfg:51
 msgid "cures"
-msgstr ""
+msgstr "liječi"
 
 #. [heals]: id=curing
 #: data/core/macros/abilities.cfg:52
@@ -3079,7 +3077,7 @@ msgstr ""
 #. [unstore_unit]
 #: data/core/macros/abilities.cfg:552
 msgid "+1 max HP"
-msgstr ""
+msgstr "+1 max HP"
 
 #. [damage]: id=backstab
 #: data/core/macros/abilities.cfg:594
@@ -3122,7 +3120,7 @@ msgstr ""
 #. [slow]: id=slow
 #: data/core/macros/abilities.cfg:632
 msgid "slows"
-msgstr ""
+msgstr "usporava"
 
 #. [slow]: id=slow
 #: data/core/macros/abilities.cfg:634
@@ -3232,7 +3230,7 @@ msgstr "Duboko podzemlje"
 #. [time]: id=midnight_hour
 #: data/core/macros/schedules.cfg:162
 msgid "Midnight"
-msgstr ""
+msgstr "Ponoć"
 
 #. [time]: id=second_watch_hour1
 #: data/core/macros/schedules.cfg:174
@@ -3279,77 +3277,77 @@ msgstr "Druga smjena"
 #. [time]: id=morning_hour1
 #: data/core/macros/schedules.cfg:257
 msgid "Morning — First Hour"
-msgstr ""
+msgstr "Jutro -Prvi Sat"
 
 #. [time]: id=morning_hour2
 #: data/core/macros/schedules.cfg:266
 msgid "Morning — Second Hour"
-msgstr ""
+msgstr "Jutro-Drugi Sat"
 
 #. [time]: id=morning_hour3
 #: data/core/macros/schedules.cfg:275
 msgid "Morning — Third Hour"
-msgstr ""
+msgstr "Jutro-Treći Sat"
 
 #. [time]: id=morning_hour4
 #: data/core/macros/schedules.cfg:284
 msgid "Morning — Fourth Hour"
-msgstr ""
+msgstr "Jutro-Četvrti Sat"
 
 #. [time]: id=midday_hour
 #: data/core/macros/schedules.cfg:293
 msgid "Midday"
-msgstr ""
+msgstr "Podne"
 
 #. [time]: id=afternoon_hour1
 #: data/core/macros/schedules.cfg:302
 msgid "Afternoon — First Hour"
-msgstr ""
+msgstr "Poslijepodne-Prvi Sat"
 
 #. [time]: id=afternoon_hour2
 #: data/core/macros/schedules.cfg:311
 msgid "Afternoon — Second Hour"
-msgstr ""
+msgstr "Poslijepodne-Drugi Sat"
 
 #. [time]: id=afternoon_hour3
 #: data/core/macros/schedules.cfg:320
 msgid "Afternoon — Third Hour"
-msgstr ""
+msgstr "Poslijepodne-Treći Sat"
 
 #. [time]: id=afternoon_hour4
 #: data/core/macros/schedules.cfg:329
 msgid "Afternoon — Fourth Hour"
-msgstr ""
+msgstr "Poslijepodne-Četvrti Sat"
 
 #. [time]: id=afternoon_hour5
 #: data/core/macros/schedules.cfg:338
 msgid "Afternoon — Fifth Hour"
-msgstr ""
+msgstr "Poslijepodne-Peti Sat"
 
 #. [time]: id=afternoon_hour6
 #: data/core/macros/schedules.cfg:347
 msgid "Afternoon — Sixth Hour"
-msgstr ""
+msgstr "Poslijepodne-Šesti Sat"
 
 #. [time]: id=first_watch_hour1
 #: data/core/macros/schedules.cfg:369
 msgid "First Watch — First Hour"
-msgstr ""
+msgstr "Prva Smjena-Prvi Sat"
 
 #. [time]: id=first_watch_hour2
 #: data/core/macros/schedules.cfg:381
 msgid "First Watch — Second Hour"
-msgstr ""
+msgstr "Prva Smjena-Drugi Sat"
 
 #. [time]: id=first_watch_hour3
 #: data/core/macros/schedules.cfg:393
 msgid "First Watch — Third Hour"
-msgstr ""
+msgstr "Prva Smjena-Treći sat"
 
 #. [time]: id=first_watch_hour4
 #: data/core/macros/schedules.cfg:405
 msgid "First Watch — Fourth Hour"
-msgstr ""
+msgstr "Prva Smjena-Četvrti Sat"
 
 #: data/core/macros/special-notes.cfg:5
 msgid ""
@@ -3528,7 +3526,7 @@ msgstr ""
 #. [trait]: id=loyal
 #: data/core/macros/traits.cfg:8
 msgid "loyal"
-msgstr ""
+msgstr "vjeran"
 
 #. [trait]: id=loyal
 #: data/core/macros/traits.cfg:9
@@ -3543,7 +3541,7 @@ msgstr ""
 #. [trait]: id=undead
 #: data/core/macros/traits.cfg:22
 msgid "undead"
-msgstr ""
+msgstr "Nemrtvi"
 
 #. [trait]: id=undead
 #: data/core/macros/traits.cfg:23
@@ -3555,13 +3553,14 @@ msgstr ""
 #. [trait]: id=elemental
 #: data/core/macros/traits.cfg:24 data/core/macros/traits.cfg:39
 #: data/core/macros/traits.cfg:54
+#, fuzzy
 msgid "Immune to drain, poison, and plague"
-msgstr ""
+msgstr "Imun na"
 
 #. [trait]: id=mechanical
 #: data/core/macros/traits.cfg:37
 msgid "mechanical"
-msgstr ""
+msgstr "mehanički"
 
 #. [trait]: id=mechanical
 #: data/core/macros/traits.cfg:38
@@ -3571,7 +3570,7 @@ msgstr ""
 #. [trait]: id=elemental
 #: data/core/macros/traits.cfg:52
 msgid "elemental"
-msgstr ""
+msgstr "elementalni"
 
 #. [trait]: id=elemental
 #: data/core/macros/traits.cfg:53
@@ -3582,7 +3581,7 @@ msgstr "Vodstvo"
 #. [trait]: id=strong
 #: data/core/macros/traits.cfg:66
 msgid "strong"
-msgstr ""
+msgstr "jak"
 
 #. [trait]: id=strong
 #: data/core/macros/traits.cfg:67
@@ -3602,7 +3601,7 @@ msgstr ""
 #. [trait]: id=quick
 #: data/core/macros/traits.cfg:98
 msgid "quick"
-msgstr ""
+msgstr "brz"
 
 #. [trait]: id=quick
 #: data/core/macros/traits.cfg:99
@@ -3632,7 +3631,7 @@ msgstr ""
 #. [trait]: id=healthy
 #: data/core/macros/traits.cfg:146
 msgid "healthy"
-msgstr ""
+msgstr "zdrav"
 
 #. [trait]: id=healthy
 #: data/core/macros/traits.cfg:147
@@ -3647,7 +3646,7 @@ msgstr ""
 #. [trait]: id=fearless
 #: data/core/macros/traits.cfg:165 data/core/macros/traits.cfg:178
 msgid "fearless"
-msgstr ""
+msgstr "hrabar"
 
 #. [trait]: id=fearless
 #: data/core/macros/traits.cfg:166 data/core/macros/traits.cfg:179
@@ -3678,7 +3677,7 @@ msgstr ""
 #. [trait]: id=weak
 #: data/core/macros/traits.cfg:208
 msgid "weak"
-msgstr ""
+msgstr "slab"
 
 #. [trait]: id=weak
 #: data/core/macros/traits.cfg:209
@@ -3700,7 +3699,7 @@ msgstr ""
 #. [trait]: id=dim
 #: data/core/macros/traits.cfg:243
 msgid "dim"
-msgstr ""
+msgstr "mračan"
 
 #. [trait]: id=dim
 #: data/core/macros/traits.cfg:244
@@ -4309,6 +4308,7 @@ msgstr ""
 
 #. [race]: id=troll
 #: data/core/units.cfg:279
+#, fuzzy
 msgid ""
 "Trolls are ancient creatures, one of the oldest known races known to inhabit "
 "the Great Continent. They are large, slow, simple-minded, and live extremely "
@@ -4345,6 +4345,8 @@ msgid ""
 "dwarves who migrated there. Trolls are a common sight on the mountain ranges "
 "north and east of Wesnoth, and wherever Orcish hordes travel."
 msgstr ""
+"Trolovi su prastara stvorenja, jedni od najstarijih vrsta koje naseljavaju "
+"Veliki Kontinenet. Oni su veliki, spori"
 
 #. [race]: id=undead
 #: data/core/units.cfg:294
@@ -4364,6 +4366,7 @@ msgstr ""
 
 #. [race]: id=undead
 #: data/core/units.cfg:302
+#, fuzzy
 msgid ""
 "Undead are not really a single race of creatures, although often treated as "
 "such. Almost any dead creature can, by a sufficiently skilled necromancer, "
@@ -4390,6 +4393,8 @@ msgid ""
 "only in the wake of Haldric I, they were not completely unheard of by elves "
 "and dwarves before that."
 msgstr ""
+"Nemrtvi nisu vrsta stvorenja, iako su smatrani takvim. Skoro svako mrtvo "
+"stvorenje može se, uz dovoljno vještog nekromancera, oživiti i ponovo "
 
 #. [race]: id=wolf, description=
 #: data/core/units.cfg:310
@@ -4419,7 +4424,7 @@ msgstr ""
 
 #: src/help.cpp:52
 msgid "Help"
-msgstr ""
+msgstr "Pomoć"
 
 #: src/help.cpp:1152
 msgid "<header>text='Units having this special attack'</header>"
@@ -4440,7 +4445,7 @@ msgstr ""
 
 #: src/help.cpp:1284
 msgid "Era:"
-msgstr ""
+msgstr "Era:"
 
 #: src/help.cpp:1292
 #, fuzzy
@@ -4449,19 +4454,19 @@ msgstr "Frakcija"
 
 #: src/help.cpp:1302
 msgid "Factions are only used in multiplayer"
-msgstr ""
+msgstr "Frakcije su korištene samo u multiplayeru"
 
 #: src/help.cpp:1345
 msgid "level"
-msgstr ""
+msgstr "razina"
 
 #: src/help.cpp:1377
 msgid "Advances from: "
-msgstr ""
+msgstr "Napreduje iz:"
 
 #: src/help.cpp:1379
 msgid "Advances to: "
-msgstr ""
+msgstr "Napreduje u:"
 
 #: src/help.cpp:1406 src/help.cpp:1722 src/help.cpp:1783
 msgid "race^Miscellaneous"
@@ -4469,11 +4474,11 @@ msgstr ""
 
 #: src/help.cpp:1408
 msgid "Race: "
-msgstr ""
+msgstr "Vrsta:"
 
 #: src/help.cpp:1415
 msgid "Abilities: "
-msgstr ""
+msgstr "Sposobnosti:"
 
 #: src/help.cpp:1432
 #, fuzzy
@@ -4482,23 +4487,23 @@ msgstr "Sposobnosti"
 
 #: src/help.cpp:1448
 msgid "HP: "
-msgstr ""
+msgstr "HP:"
 
 #: src/help.cpp:1449
 msgid "Moves: "
-msgstr ""
+msgstr "Pokreti:"
 
 #: src/help.cpp:1450
 msgid "Cost: "
-msgstr ""
+msgstr "Cijena:"
 
 #: src/help.cpp:1451
 msgid "Alignment: "
-msgstr ""
+msgstr "Svrstavanje:"
 
 #: src/help.cpp:1457
 msgid "Required XP: "
-msgstr ""
+msgstr "Potreban XP:"
 
 #: src/help.cpp:1466
 msgid "unit help^Attacks"
@@ -4510,39 +4515,39 @@ msgstr ""
 
 #: src/help.cpp:1474
 msgid "Type"
-msgstr ""
+msgstr "Tip"
 
 #: src/help.cpp:1475
 msgid "Strikes"
-msgstr ""
+msgstr "Udarci"
 
 #: src/help.cpp:1476
 msgid "Range"
-msgstr ""
+msgstr "Domet"
 
 #: src/help.cpp:1477
 msgid "Special"
-msgstr ""
+msgstr "Specijalno"
 
 #: src/help.cpp:1527
 msgid "Resistances"
-msgstr ""
+msgstr "Otpori"
 
 #: src/help.cpp:1531
 msgid "Attack Type"
-msgstr ""
+msgstr "Tip napada"
 
 #: src/help.cpp:1532
 msgid "Resistance"
-msgstr ""
+msgstr "Otpor"
 
 #: src/help.cpp:1571
 msgid "Terrain Modifiers"
-msgstr ""
+msgstr "Mjenjači terena"
 
 #: src/help.cpp:1575
 msgid "Terrain"
-msgstr ""
+msgstr "Teren"
 
 #: src/help.cpp:1576
 msgid "Defense"
@@ -4550,7 +4555,7 @@ msgstr "Obrana"
 
 #: src/help.cpp:1577
 msgid "Movement Cost"
-msgstr ""
+msgstr "Cijena pokreta"
 
 #: src/help.cpp:1789
 msgid "<header>text='Units of this race'</header>"
@@ -4566,19 +4571,19 @@ msgstr "Naprijed >"
 
 #: src/help.cpp:2811
 msgid "Reference to unknown topic: "
-msgstr ""
+msgstr "Upućenje na nepoznatu temu:"
 
 #: src/help.cpp:3067
 msgid "corrupted original file"
-msgstr ""
+msgstr "pokvaren originalan fajl"
 
 #: src/help.cpp:3158
 msgid "Close"
-msgstr ""
+msgstr "Zatvori"
 
 #: src/help.cpp:3161
 msgid "The Battle for Wesnoth Help"
-msgstr ""
+msgstr "Battle for Wesnoth pomoć"
 
 #: src/help.cpp:3217
 msgid "Parse error when parsing help text: "
