--- a/po/wesnoth-l/hr.po
+++ b/po/wesnoth-l/hr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.5.0-svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-12 10:25+0200\n"
-"PO-Revision-Date: 2008-03-02 14:04+0100\n"
+"POT-Creation-Date: 2012-08-24 21:37+0200\n"
+"PO-Revision-Date: 2012-08-27 10:36+0100\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -20,42 +20,42 @@ msgstr ""
 #. "marchlander" is archaic English for an inhabitant of a border region.
 #: data/campaigns/Liberty/_main.cfg:10 data/campaigns/Liberty/_main.cfg:11
 msgid "Liberty"
-msgstr ""
+msgstr "Sloboda"
 
 #. [campaign]: id=Liberty
 #. Yes, that is "marchlanders", not "marshlanders".
 #. "marchlander" is archaic English for an inhabitant of a border region.
 #: data/campaigns/Liberty/_main.cfg:17
 msgid "(Easy)"
-msgstr ""
+msgstr "(Lagano)"
 
 #. [campaign]: id=Liberty
 #. Yes, that is "marchlanders", not "marshlanders".
 #. "marchlander" is archaic English for an inhabitant of a border region.
 #: data/campaigns/Liberty/_main.cfg:17
 msgid "Peasant"
-msgstr ""
+msgstr "Seljak"
 
 #. [campaign]: id=Liberty
 #. Yes, that is "marchlanders", not "marshlanders".
 #. "marchlander" is archaic English for an inhabitant of a border region.
 #: data/campaigns/Liberty/_main.cfg:18
 msgid "(Normal)"
-msgstr ""
+msgstr "(Normalno)"
 
 #. [campaign]: id=Liberty
 #. Yes, that is "marchlanders", not "marshlanders".
 #. "marchlander" is archaic English for an inhabitant of a border region.
 #: data/campaigns/Liberty/_main.cfg:18
 msgid "Outlaw"
-msgstr ""
+msgstr "Odmetnik"
 
 #. [campaign]: id=Liberty
 #. Yes, that is "marchlanders", not "marshlanders".
 #. "marchlander" is archaic English for an inhabitant of a border region.
 #: data/campaigns/Liberty/_main.cfg:19
 msgid "(Difficult)"
-msgstr ""
+msgstr "(Teško)"
 
 #. [campaign]: id=Liberty
 #. Yes, that is "marchlanders", not "marshlanders".
@@ -69,7 +69,7 @@ msgstr ""
 #. "marchlander" is archaic English for an inhabitant of a border region.
 #: data/campaigns/Liberty/_main.cfg:27
 msgid "(Intermediate level, 8 scenarios.)"
-msgstr ""
+msgstr "Srednje teško, 8 scenarija)"
 
 #. [campaign]: id=Liberty
 #. Yes, that is "marchlanders", not "marshlanders".
@@ -86,7 +86,7 @@ msgstr ""
 #. [about]
 #: data/campaigns/Liberty/_main.cfg:30
 msgid "Campaign Design"
-msgstr ""
+msgstr "Dizajn Kampanje"
 
 #. [about]
 #: data/campaigns/Liberty/_main.cfg:36
@@ -96,12 +96,12 @@ msgstr ""
 #. [about]
 #: data/campaigns/Liberty/_main.cfg:42
 msgid "Campaign Maintenance"
-msgstr ""
+msgstr "Održavanje Kampanje"
 
 #. [about]
 #: data/campaigns/Liberty/_main.cfg:53
 msgid "Artwork and Graphics Design"
-msgstr ""
+msgstr "Ilustracije i Grafički Dizajn"
 
 #. [scenario]: id=01_The_Raid
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:4
@@ -111,7 +111,7 @@ msgstr ""
 #. [label]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:18
 msgid "Dallben"
-msgstr ""
+msgstr "Dallben"
 
 #. [part]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:23
@@ -157,12 +157,12 @@ msgstr ""
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:59
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:30
 msgid "Baldras"
-msgstr ""
+msgstr "Baldras"
 
 #. [side]: type=Goblin Pillager, id=Fal Khag
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:75
 msgid "Fal Khag"
-msgstr ""
+msgstr "Fal Khag"
 
 #. [objective]: condition=win
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:103
@@ -186,7 +186,7 @@ msgstr ""
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:389
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:601
 msgid "Death of Baldras"
-msgstr ""
+msgstr "Baldrasova smrt"
 
 #. [objective]: condition=lose
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:115
@@ -197,31 +197,31 @@ msgstr ""
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:162
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:104
 msgid "Death of Harper"
-msgstr ""
+msgstr "Harperova smrt"
 
 #. [event]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:155
 msgid "Gatrakh"
-msgstr ""
+msgstr "Gatrakh"
 
 #. [event]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:156
 msgid "Thurg"
-msgstr ""
+msgstr "Thurg"
 
 #. [event]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:159
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:164
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:169
 msgid "Krung"
-msgstr ""
+msgstr "Krung"
 
 #. [event]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:160
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:165
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:170
 msgid "Gorokh"
-msgstr ""
+msgstr "Gorokh"
 
 #. [message]: speaker=Fal Khag
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:194
@@ -241,47 +241,47 @@ msgstr ""
 #. [event]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:207
 msgid "Jalak"
-msgstr ""
+msgstr "Jalak"
 
 #. [event]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:208
 msgid "Delurin"
-msgstr ""
+msgstr "Delurin"
 
 #. [event]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:209
 msgid "Red"
-msgstr ""
+msgstr "Red"
 
 #. [event]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:210
 msgid "Ordo"
-msgstr ""
+msgstr "Ordo"
 
 #. [event]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:211
 msgid "Novus"
-msgstr ""
+msgstr "Novus"
 
 #. [event]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:212
 msgid "Teneor"
-msgstr ""
+msgstr "Teneor"
 
 #. [event]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:213
 msgid "Kembe"
-msgstr ""
+msgstr "Kembe"
 
 #. [event]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:214
 msgid "Treagh"
-msgstr ""
+msgstr "Treagh"
 
 #. [unit]: type=Footpad_Peasant, id=Harper
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:221
 msgid "Harper"
-msgstr ""
+msgstr "Harper"
 
 #. [message]: speaker=Red
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:235
@@ -327,8 +327,9 @@ msgstr ""
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:261
+#, fuzzy
 msgid "... I know... All right now, let’s stop these goblins!"
-msgstr ""
+msgstr "...Znam...Dobro, idemo zaustaviti ove gobline!"
 
 #. [message]: speaker=Harper
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:301
@@ -375,17 +376,17 @@ msgstr ""
 #. [event]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:365
 msgid "Remald"
-msgstr ""
+msgstr "Remald"
 
 #. [event]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:366
 msgid "Wolmas"
-msgstr ""
+msgstr "Wolmas"
 
 #. [event]
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:371
 msgid "Jasken"
-msgstr ""
+msgstr "Jasken"
 
 #. [message]: speaker=Wolmas
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:378
@@ -405,7 +406,7 @@ msgstr ""
 #. [message]: speaker=Remald
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:393
 msgid "Halt!"
-msgstr ""
+msgstr "Stoj!"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/01_The_Raid.cfg:413
@@ -454,7 +455,7 @@ msgstr ""
 #. [side]: type=Cavalier, id=Tarwen
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:45
 msgid "Tarwen"
-msgstr ""
+msgstr "Tarwen"
 
 #. [side]: type=Royal Guard, id=Archarel
 #. [side]: type=Iron Mauler, id=Linneus
@@ -472,7 +473,7 @@ msgstr ""
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:109
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:137
 msgid "Asheviere"
-msgstr ""
+msgstr "Asheviere"
 
 #. [objective]: condition=win
 #: data/campaigns/Liberty/scenarios/02_Civil_Disobedience.cfg:77
@@ -593,12 +594,12 @@ msgstr ""
 #. [side]: type=Highwayman_Peasant, id=Relana
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:43
 msgid "Relana"
-msgstr ""
+msgstr "Relana"
 
 #. [side]: type=Orcish Warrior, id=Urk Delek
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:70
 msgid "Urk Delek"
-msgstr ""
+msgstr "Urk Delek"
 
 #. [side]: type=Orcish Warrior, id=Urk Delek
 #. [side]: type=Saurian Oracle, id=Thhsthss
@@ -616,7 +617,7 @@ msgstr ""
 #. [side]: type=Saurian Oracle, id=Thhsthss
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:99
 msgid "Thhsthss"
-msgstr ""
+msgstr "Thhsthss"
 
 #. [objective]: condition=win
 #: data/campaigns/Liberty/scenarios/03_A_Strategy_Of_Hope.cfg:128
@@ -769,7 +770,7 @@ msgstr ""
 #. [label]
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:18
 msgid "Elensefar"
-msgstr ""
+msgstr "Elensfar"
 
 #. [label]
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:23
@@ -779,12 +780,12 @@ msgstr ""
 #. [side]: type=General, id=Lord Maddock
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:52
 msgid "Lord Maddock"
-msgstr ""
+msgstr "Lord Maddock"
 
 #. [side]: type=General, id=Kestrel
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:74
 msgid "Kestrel"
-msgstr ""
+msgstr "Kestrel"
 
 #. [objective]: condition=win
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:103
@@ -799,7 +800,7 @@ msgstr ""
 #. [event]
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:140
 msgid "Rothel"
-msgstr ""
+msgstr "Rothel"
 
 #. [message]: speaker=Lord Maddock
 #: data/campaigns/Liberty/scenarios/04_Unlawful_Orders.cfg:190
@@ -969,17 +970,17 @@ msgstr ""
 #. [time]: id=midnight
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:12
 msgid "Midnight"
-msgstr ""
+msgstr "Ponoć"
 
 #. [side]: type=Master Bowman, id=Quentin
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:50
 msgid "Quentin"
-msgstr ""
+msgstr "Quentin"
 
 #. [side]: type=Rogue, id=Hans
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:87
 msgid "Hans"
-msgstr ""
+msgstr "Hans"
 
 #. [objective]: condition=win
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:122
@@ -1011,7 +1012,7 @@ msgstr ""
 #. [unit]: type=Thief, id=Link
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:511
 msgid "Link"
-msgstr ""
+msgstr "Link"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/05_Hide_and_Seek.cfg:516
@@ -1126,22 +1127,22 @@ msgstr ""
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:63
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:209
 msgid "Helicrom"
-msgstr ""
+msgstr "Helicrom"
 
 #. [side]: type=Necromancer, id=Mal-Jarrof
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:98
 msgid "Mal-Jarrof"
-msgstr ""
+msgstr "Mal-Jarrof"
 
 #. [side]: type=Necromancer, id=Mal-Jerod
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:114
 msgid "Mal-Jerod"
-msgstr ""
+msgstr "Mal-Jerod"
 
 #. [side]: type=Lich, id=Sel-Mana
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:130
 msgid "Sel-Mana"
-msgstr ""
+msgstr "Sel-Mana"
 
 #. [objective]: condition=win
 #: data/campaigns/Liberty/scenarios/06_The_Grey_Woods.cfg:154
@@ -1376,12 +1377,12 @@ msgstr ""
 #. [side]: type=Royal Guard, id=Archarel
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:58
 msgid "Archarel"
-msgstr ""
+msgstr "Archarel"
 
 #. [side]: type=Iron Mauler, id=Linneus
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:76
 msgid "Linneus"
-msgstr ""
+msgstr "Linneus"
 
 #. [objective]: condition=win
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:96
@@ -1391,12 +1392,12 @@ msgstr ""
 #. [event]
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:135
 msgid "Jingo"
-msgstr ""
+msgstr "Jingo"
 
 #. [event]
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:136
 msgid "Majel"
-msgstr ""
+msgstr "Majel"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/07_The_Hunters.cfg:154
@@ -1607,17 +1608,17 @@ msgstr ""
 #. [side]: type=General, id=Dommel
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:69
 msgid "Dommel"
-msgstr ""
+msgstr "Dommel"
 
 #. [side]: type=Orcish Warlord, id=Vashna
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:145
 msgid "Vashna"
-msgstr ""
+msgstr "Vashna"
 
 #. [side]: type=Orcish Warlord, id=Vashna
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:199
 msgid "Orcs"
-msgstr ""
+msgstr "Orci"
 
 #. [objective]: condition=win
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:305
@@ -1762,7 +1763,7 @@ msgstr ""
 #. [unit]: type=Paladin, id=Sir Gwydion
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:553
 msgid "Sir Gwydion"
-msgstr ""
+msgstr "Sir Gwydion"
 
 #. [message]: type=Lancer
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:568
@@ -1897,7 +1898,7 @@ msgstr ""
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:976
 msgid "NO!"
-msgstr ""
+msgstr "NE!"
 
 #. [message]: speaker=Baldras
 #: data/campaigns/Liberty/scenarios/08_Glory.cfg:980
@@ -2054,7 +2055,7 @@ msgstr ""
 #: data/campaigns/Liberty/units/Bone_Knight.cfg:31
 #: data/campaigns/Liberty/units/Skeleton_Rider.cfg:42
 msgid "axe"
-msgstr ""
+msgstr "sjekira"
 
 #. [attack]: type=impact
 #: data/campaigns/Liberty/units/Bone_Knight.cfg:68
@@ -2079,7 +2080,7 @@ msgstr ""
 #. [attack]: type=blade
 #: data/campaigns/Liberty/units/Death_Squire.cfg:32
 msgid "sword"
-msgstr ""
+msgstr "mač"
 
 #. [unit_type]: id=Rogue Mage, race=human
 #: data/campaigns/Liberty/units/Rogue_Mage.cfg:5
@@ -2100,7 +2101,7 @@ msgstr ""
 #: data/campaigns/Liberty/units/Rogue_Mage.cfg:24
 #: data/campaigns/Liberty/units/Shadow_Mage.cfg:27
 msgid "short sword"
-msgstr ""
+msgstr "kratki mač"
 
 #. [attack]: type=cold
 #: data/campaigns/Liberty/units/Rogue_Mage.cfg:33
